<resources>
    <string name="app_name">Azima</string>
    <string name="fast_affordable_loans_directly_to_your_phone">Fast, affordable loans directly to your phone.</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="create_your_account">Create your account</string>
    <string name="azima_logo">Azima Logo</string>
    <string name="sign_in">SIGN IN</string>
    <string name="please_enter_your_pin">Please enter your PIN</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="cancel">Cancel</string>
    <string name="female">Female</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (DD/MM/YYYY)</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="other_names">Other Names</string>
    <string name="male">Male</string>
    <string name="national_id_number">National ID Number</string>

    <string name="permissions_not_granted_read_phone_state">Azima uses your phone\'s data to make lending decisions. Please grant all requested permissions to continue using Azima</string>
    <string name="permission_available_read_phone_state">Azima respects your privacy</string>

    <string name="title_location_permission">Permission Request</string>
    <string name="text_location_permission">Azima uses your phone\'s location to make lending decisions. Please grant all requested permissions to continue using Azima</string>
    <string name="ok">OK</string>
    <string name="phone_number">Phone Number</string>
    <string name="string_phone_number">Enter Phone No: 2547XXXXXXXX</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
</resources>
